# solo-song-writer

./: .gitignore  README.md  app.py  pyproject.toml  start_gunicorn.sh
templates/: index.html
