[tool.poetry]
name = "solo-song-writer"
version = "0.1.0"
description = ""
authors = ["winkidney <winkidney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pypinyin = "^0.44.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
